--- a/hershield/pubspec.yaml
+++ b/hershield/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_storage: ^12.3.7
   image_picker: ^0.8.5+3
   uuid: ^4.5.1
+  flutter_dnd: ^0.1.4+1
   # path_provider: ^2.0.11
   # camera: ^0.11.0+1
   # audioplayers: ^6.1.0
