--- a/hershield/pubspec.yaml
+++ b/hershield/pubspec.yaml
@@ -54,6 +54,12 @@ dependencies:
   image_picker: ^0.8.5+3
   uuid: ^4.5.1
   flutter_dnd: ^0.1.4+1
+  flutter_sound: ^9.6.0
+  path_provider: ^2.1.5
+  # camera: ^0.11.0+2
+  # audioplayers: ^6.1.1
+  # path_provider: ^2.1.5
+  # flutter_sound: ^9.6.0
  
  
 
