--- a/hershield/android/app/src/main/AndroidManifest.xml
+++ b/hershield/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <application
-        android:label="hershield"
+        android:label="HerShield"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
